got ipc communication working

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <span>></span>
     </a>
 
-    <video src="https://v16m.tiktokcdn.com/e062afbdcfb745ebc79f370cbc29eebc/5f144455/video/tos/useast2a/tos-useast2a-ve-0068c004/1090292a59614181bba1d4f01e0678c7/?a=1233&br=2050&bt=1025&cr=0&cs=0&dr=0&ds=3&er=&l=2020071907020101019021922310C2168D&lr=tiktok_m&mime_type=video_mp4&qs=0&rc=MzNoNzlyOjRwczMzNzczM0ApOGg6O2c7ODs2N2Y7M2g4M2deZ2RgbDAvcjBfLS02MTZzczFeYDYwNDBeMzRhXjUuYGI6Yw%3D%3D&vl=&vr=" autoplay ></video>
+    <video class="video-main" data-video-id="123" src="https://v16m.tiktokcdn.com/4f6d2e6c20aa9dd3ecd73143bbdf196b/5f150147/video/tos/useast2a/tos-useast2a-ve-0068c004/1090292a59614181bba1d4f01e0678c7/?a=1233&br=2050&bt=1025&cr=0&cs=0&dr=0&ds=3&er=&l=20200719202811010189073017282669FB&lr=tiktok_m&mime_type=video_mp4&qs=0&rc=MzNoNzlyOjRwczMzNzczM0ApOGg6O2c7ODs2N2Y7M2g4M2deZ2RgbDAvcjBfLS02MTZzczFeYDYwNDBeMzRhXjUuYGI6Yw%3D%3D&vl=&vr=" autoplay loop ></video>
     <!-- poster="posterimage.jpg" -->
 
     <div class="debug is-hidden">
