--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
 
     <!-- TODO: re-enable CSP - allow tiktokcdn.com -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'"> -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self';"> -->
+    <!-- <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self';"> -->
+     <!-- child-src: 'self tiktokcdn.com' -->
     <title>TikTron</title>
     <link rel="stylesheet" href="./vendor/css/bulma.min.css">
     <link rel="stylesheet" href="./css/style.css">
