--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
       </div>
     </div>
 
+    <div class="columns">
+      <div class="column is-one-fifth"></div>
+      <div class="column ">
+        <form class="search-form">
+          <div class="field has-addons">
+            <div class="control is-expanded">
+              <input class="input is-full has-text-white has-background-dark" type="text" placeholder="Search user / hashtag">
+            </div>
+            <div class="control">
+              <input type="submit" class="button is-info has-background-grey" value="🔍" />
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="column is-one-fifth"></div>
+    </div>
+
     <a class="arrow-left arrow">
       <span><</span>
     </a>
@@ -29,7 +46,9 @@
       <span>></span>
     </a>
 
-    <video class="video-main" data-video-id="123" src="https://v16m.tiktokcdn.com/4f6d2e6c20aa9dd3ecd73143bbdf196b/5f150147/video/tos/useast2a/tos-useast2a-ve-0068c004/1090292a59614181bba1d4f01e0678c7/?a=1233&br=2050&bt=1025&cr=0&cs=0&dr=0&ds=3&er=&l=20200719202811010189073017282669FB&lr=tiktok_m&mime_type=video_mp4&qs=0&rc=MzNoNzlyOjRwczMzNzczM0ApOGg6O2c7ODs2N2Y7M2g4M2deZ2RgbDAvcjBfLS02MTZzczFeYDYwNDBeMzRhXjUuYGI6Yw%3D%3D&vl=&vr=" autoplay loop ></video>
+    <p class="loading center">Loading...</p>
+
+    <video class="video-main" data-video-id="123" src="" autoplay loop ></video>
     <!-- poster="posterimage.jpg" -->
 
     <div class="debug is-hidden">
